--- a/portfolio.html
+++ b/portfolio.html
@@ -29,17 +29,24 @@
 
 
 <!--hero-->   
-<section id="title">
+<div id="title">
     <div class="title-text">
         <h1 class="txt1">Hi, I'm<span class="txt2">Abhindra</span></h1>
-        <h3>Web Developer</h3>
         <p>
-          I'm passionate about web development, photography, and cars. Web development allows me to create functional and beautiful digital experiences. Photography lets me capture moments and tell stories visually. I'm also an auto enthusiast, fascinated by the design and engineering of cars. These interests drive my continuous learning and creativity.</p>
+          Web development, Photography, and Cars. </p>
     </div>
     <img src="./images/DSC_0239.jpg" class="dp" alt="Abhindra" loading="lazy">
-</section>
+</div>
 
-
+<!--about-->
+<div id="about">
+    <div class="about-text">
+        <h2>About Me</h2>
+        <p>
+            I'm a web developer based in Kerala, India. I'm passionate about creating beautiful and functional digital experiences. I'm also a photographer and an auto enthusiast. I love to capture moments and tell stories visually. I'm fascinated by the design and engineering of cars. These interests drive my continuous learning and creativity.
+        </p>
+    </div>
+</div>
 
 
 
