--- a/portfolio.html
+++ b/portfolio.html
@@ -19,6 +19,7 @@
         <h1>Portfolio</h1>
         <ul>
             <li><a href="#title">Home</a></li>
+            <li><a href="#projects">Projects</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#photographs">Photos</a></li>
             <li><a href="#contact">Contact</a></li>
@@ -38,6 +39,45 @@
     <img src="./images/DSC_0239.jpg" class="dp" alt="Abhindra" loading="lazy">
 </div>
 
+<!--Projects-->
+<div id="projects">
+    <div class="projects-text">
+        <h2>Projects</h2>
+    </div>
+    <div class="projects-grid">
+        <div class="project">
+            <div>
+            <h3>Tindog</h3>
+            <p class="project-1">
+                Created a tinder-like app for dogs using HTML, CSS, and Bootstrap under the guidance of Dr.Angela Yu bootcamp course on Web development. Used bootstrap to achieve most of the styling and layout and easily achieve responsive layout.
+            </p>
+            </div>
+            <a href="https://abhindra-0458.github.io/TinDog/">
+            <img src="./images/Screenshot 2024-02-24 231639.png" alt="Project 1" loading="lazy" width="250">
+            </a>
+        </div>
+        <div class="project">
+            <img src="./images/7292022_nuraghies_2_08.jpg" alt="Project 2" loading="lazy" width="250">
+            <div>
+            <h3>Project 2</h3>
+            <p class="project-1">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            </p>
+        </div>
+        </div>
+        <div class="project">
+            <div>
+            <h3>Project 3</h3>
+            <p class="project-1">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            </p>
+        </div>
+            <img src="./images/7292022_nuraghies_2_08.jpg" alt="Project 2" loading="lazy" width="250">
+        
+        </div>
+    </div>
+
+
 <!--about-->
 <div id="about">
     <div class="about-text">
@@ -47,6 +87,8 @@
         </p>
     </div>
 </div>
+
+
 
 
 
